<resources>
    <string name="app_name">RunNaturally</string>

    <string name="invitation">Los récords están para ser superados</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="acept">He leído y aceptado los</string>
    <string name="terms">términos y condiciones</string>

    <string name="empty_email">Introduce tu email </string>
    <string name="invalid_email">El email del usuario es incorrecto</string>

    <string name="google"> Continuar con Google</string>
    <string name="facebook"> Continuar con Facebook</string>

    <string name="bar_title_terms">Terminos y Condiciones</string>
    <string name="terms1">
        This document (hereinafter, the "Agreement") establishes the terms and conditions of Robert Half Internacional Empresa de Servicios Transitorios Limitada, located at Avenida Isidora Goyenechea 2800 Piso 15. Torre Titanium 7550-647 Las Condes, which shall apply to the
        Users access and use of this web page (the "Web Site"). Please read this Agreement carefully. By accessing, viewing or using the Web Site, Users ("you", "you", "User", or "user") agree to be bound by the terms and conditions set forth in this Agreement. If you do not
        agree to be bound by these terms and conditions, you may not access or use the Web Site.
    </string>
    <string name="terms2">
        Robert Half International Temporary Services Company Limited and its respective affiliates (collectively, "RH") reserve the right to update this Agreement from time to time. Accordingly, we recommend that you periodically review any changes to this Agreement.
    </string>
    <string name="terms3">
        This Web Site is intended exclusively for residents. Users resident or domiciled in another country who wish to access and use the Web Site do so at their own risk and responsibility, and must ensure that such access and/or use complies with the applicable laws of their country.
    </string>

    <string name="bar_title">RunNath</string>


    <string name="menu_running">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Hazte Premium</string>
    <string name="menu_clearpreferences">Restablecer ajustes</string>
    <string name="menu_signout">Cerrar Sesion</string>

    <string name="level">Nivel</string>
    <string name="user">laura@runnat.com</string>
    <string name="nav_hi">Los récords están para ser superados</string>

    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Cerrar</string>

    <string name="bar_title_record">Records</string>
    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>

    <!--Activity main-->
    <string name="start">INICIAR</string>
    <string name="stop">TATE QUIETO</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de Música</string>
    <string name="soft_volumen">Volumen de Música Tranqui</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>


</resources>