<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsActivity"
    android:textAlignment="textStart">

    <TextView
        android:id="@+id/toolbar_terms"
        style="@style/viewCurtom"
        android:layout_height="wrap_content"
        android:background="@color/DarkSlateBlue"
        android:paddingTop="7dp"
        android:text="@string/bar_title_terms"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/tvTerms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/terms1"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/tvTerms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/terms2"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="221dp" />

    <TextView
        android:id="@+id/tvTerms3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/terms3"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="318dp" />

</androidx.constraintlayout.widget.ConstraintLayout>